// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BackToTopBtn > renders correctly 1`] = `
<transition-stub
  appear="false"
  css="true"
  name="fade-transition"
  persisted="false"
>
  <button
    class="
      px-0
      px-md-4
      text-primary
      text-wrap
      v-btn
      v-btn--density-default
      v-btn--size-default
      v-btn--variant-outlined
      v-theme--light
      vd-back-to-top-btn
    "
    style="
      bottom: 16px;
      margin-right: 16px;
      display: none;
    "
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span class="">
        Retour en haut
      </span>
      <i
        aria-hidden="true"
        class="
          M13,20H11V8L5.5,13.5L4.08,12.08L12,4.16L19.92,12.08L18.5,13.5L13,8V20Z
          mdi
          ml-0
          ml-md-2
          notranslate
          text-primary
          v-icon
          v-theme--light
        "
        style="font-size: medium;"
      ></i>
    </span>
    <!---->
    <!---->
  </button>
</transition-stub>
`;

exports[`BackToTopBtn > renders correctly when nudgeBottom and nudgeRight are set to invalid values 1`] = `
<transition-stub
  appear="false"
  css="true"
  name="fade-transition"
  persisted="false"
>
  <button
    class="
      px-0
      px-md-4
      text-primary
      text-wrap
      v-btn
      v-btn--density-default
      v-btn--size-default
      v-btn--variant-outlined
      v-theme--light
      vd-back-to-top-btn
    "
    style="
      bottom: 0px;
      margin-right: 0px;
      display: none;
    "
    type="button"
  >
    <span class="v-btn__overlay"></span>
    <span class="v-btn__underlay"></span>
    <!---->
    <span
      class="v-btn__content"
      data-no-activator=""
    >
      <span class="">
        Retour en haut
      </span>
      <i
        aria-hidden="true"
        class="
          M13,20H11V8L5.5,13.5L4.08,12.08L12,4.16L19.92,12.08L18.5,13.5L13,8V20Z
          mdi
          ml-0
          ml-md-2
          notranslate
          text-primary
          v-icon
          v-theme--light
        "
        style="font-size: medium;"
      ></i>
    </span>
    <!---->
    <!---->
  </button>
</transition-stub>
`;
